reducing duplicated code. change mostly in drivers